[tool.poetry]
name = "findsummits4sotaja"
version = "0.1.0"
description = ""
authors = ["JJ1XGO <JJ1XGO@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
geojson = "^2.5.0"
matplotlib = "^3.4.2"
opencv-python = "^4.5.3"
openpyxl = "^3.0.7"
Pillow = "^8.3.1"
requests = "^2.26.0"
tqdm = "^4.61.2"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
